# pandas_meetup

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  demo_pandas.ipynb  demo_pandas.py  docker-compose.yml  gen_csv_arg.py  gen_csv_typer.py  justfile  pandas_intro.ipynb  pyproject.toml  qr_gen.py  requirements.txt  startup.sh
csv/: dataset-of-10s.csv
jupyter/: requirements.txt
xml/: ea.xml
