[tool.poetry]
name = "pandas-meetup"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pandas_meetup"}]

[tool.poetry.dependencies]
python = "3.10.7"
ipykernel = "^6.15.3"
pandas = "^1.5.0"
requests = "^2.28.1"
matplotlib = "^3.6.0"
numpy = "^1.23.3"


[tool.poetry.group.dev.dependencies]
notebook = "^6.4.12"
jupyterlab = "^3.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
