[tool.poetry]
name = "pandas-meetup"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pandas_meetup"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.15.3"
pandas = "^1.5.0"
requests = "^2.28.1"
matplotlib = "^3.6.0"
numpy = "^1.23.3"
PyQRCode = "^1.2.1"
pypng = "^0.20220715.0"
icecream = "^2.1.3"
ipympl = "^0.9.2"
typer = "^0.6.1"


[tool.poetry.group.dev.dependencies]
notebook = "^6.5.3"
jupyterlab = "^3.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
